[gd_scene load_steps=3 format=3 uid="uid://ba6gl5ula132g"]

[ext_resource type="Script" uid="uid://diwree6yvcaco" path="res://scripts/character_card.gd" id="1_script"]
[ext_resource type="FontFile" uid="uid://cdja3eosvd0mn" path="res://assets/font/LEEEAFHEI-REGULAR.TTF" id="2_font"]

[node name="CharacterCard" type="Control"]
custom_minimum_size = Vector2(300, 420)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_script")

[node name="CardFace" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5
metadata/_edit_lock_ = true

[node name="CharacterImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 40.0
offset_right = -13.0
offset_bottom = -94.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="CardOverlay" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 38.0
offset_top = 157.0
offset_right = -42.0
offset_bottom = -73.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="TextLayer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="CompanyName" type="Label" parent="TextLayer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 66.0
offset_top = 290.0
offset_right = -70.0
offset_bottom = 322.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "WonderTech"
horizontal_alignment = 1

[node name="JobTitle" type="Label" parent="TextLayer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 321.0
offset_bottom = 351.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 24
text = "生态员工"
horizontal_alignment = 1

[node name="CharacterName" type="Label" parent="TextLayer"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -61.0
offset_right = -1.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 40
text = "角色名称"
horizontal_alignment = 1
